--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.0'
     }
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -45,10 +49,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //material
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     def hilt_version = "2.28-alpha"
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -78,7 +84,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
     //moshi
-    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi:1.11.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.11.0")
 
     def room = "2.2.5"
@@ -107,9 +113,15 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     def glide_version = "4.9.0"
     //Glide
+
     //noinspection GradleDependency
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
+    //SSP - a scalable size unit for texts
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //SDP - a scalable size unit
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
 }
 
