--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewModels"
     kapt "androidx.hilt:hilt-compiler:$hilt_viewModels"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     def kotlin_ktx = "1.3.0"
     //noinspection GradleDependency
@@ -121,17 +122,18 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-    def glide_version = "4.9.0"
+    def glide_version = "4.11.0"
     //Glide
 
-    //noinspection GradleDependency
+    // Glide dependency
     implementation "com.github.bumptech.glide:glide:$glide_version"
-
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     //SSP - a scalable size unit for texts
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
     //SDP - a scalable size unit
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.yarolegovich:discrete-scrollview:1.5.1'
 
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
 }
