--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,10 +90,13 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     //noinspection GradleDependency
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
+    // coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     //moshi
     implementation "com.squareup.moshi:moshi:1.11.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.11.0")
@@ -137,6 +140,9 @@ dependencies {
 
     //Facebook Shimmer Loading
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    //paging 3
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha09'
+
 }
 
 kapt {
